--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -5,19 +5,11 @@
         <img src={{char.image}} class="card-img-top" alt="imagen">
         <div class="card-body">
           <h5 class="card-title">{{char.name}}</h5>
-          <a href="#" class="btn btn-warning w-100">See more</a>
+          <a [routerLink]="['/char',char.id]" class="btn btn-warning w-100">See more</a>
         </div>
       </div>
     </div>
-    <div class="col" *ngFor="let char of characters2">
-      <div class="card" style="width: 18rem;" >
-        <img src={{char.image}} class="card-img-top" alt="Imagen">
-        <div class="card-body">
-          <h5 class="card-title">{{char.name}}</h5>
-          <a href="#" class="btn btn-warning w-100">See more</a>
-        </div>
-      </div>
-    </div>
+
   </div>
 
 </div>
