--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
         <li class="nav-item pe-3">
           <a  routerLink="/about" class="nav-link">About</a>
         </li>
+        <li class="nav-item pe-3">
+          <a  routerLink="/add" class="nav-link">Añadir</a>
+        </li>
         <li class="nav-item">
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
