--- a/src/app/char/char.component.html
+++ b/src/app/char/char.component.html
@@ -9,6 +9,10 @@
       <span class="fw-bold">Especie:</span><br><span class="p-4">{{character.species}}</span><br>
       <span class="fw-bold">Genero:</span><br><span class="p-4">{{character.gender}}</span><br>
     </div>
+    <div class="col">
+      <button class="btn btn-danger" (click)="delChar()">Delete</button>
+      <button class="btn btn-success" (click)="editChar()">edit</button>
+    </div>
   </div>
 </div>
 
