--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -25,7 +25,7 @@
       </div>
     </form>
     <div class="alert alert-success" *ngIf="isLoggedIn">
-      Te has logueado correctamente {{user}}
+      Te has logueado correctamente
     </div>
   </div>
 </div>
